# helpdesk-hub-api

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
app/: main.py
app/adapters/http/docs/: error_responses.py
app/adapters/http/exception_handlers/: handlers.py  http_errors.py
app/adapters/http/mappers/: category_mapper.py  ticket_mapper.py
app/adapters/http/routers/: category_router.py  system_router.py  ticket_router.py
app/adapters/http/schemas/: category_schema.py  common_schema.py  ticket_schema.py
app/api/docs/: error_responses.py
app/api/exception_handlers/: handlers.py  http_errors.py
app/api/mappers/: category_mapper.py  comment_mapper.py  pagination_mapper.py  ticket_mapper.py
app/api/messages/: catalog.py
app/api/routers/: category_router.py  comment_router.py  system_router.py  ticket_router.py
app/api/schemas/: category_schema.py  comment_schema.py  pagination_schema.py  ticket_schema.py
app/application/bootstrap/: default_categories.py
app/application/dtos/: pagination.py  sorting.py  ticket_query.py
app/application/interfaces/repositories/: category_repository.py  comment_repository.py  ticket_repository.py
app/application/ports/: ticket_repository.py
app/application/use_cases/category/: create_category.py  get_category_by_id.py  list_categories.py  update_category.py
app/application/use_cases/comment/: create_comment.py  list_comments.py  update_comment.py
app/application/use_cases/ticket/: create_ticket.py  get_ticket.py  get_ticket_by_id.py  list_tickets.py  update_ticket.py
app/domain/entities/: category.py  comment.py  ticket.py
app/domain/enum/: ticket_priority.py  ticket_sort_field.py  ticket_status.py
app/domain/exceptions/: base_exceptions.py  category_exceptions.py  comment_exceptions.py  ticket_exceptions.py
app/domain/repositories/: category_repository.py  ticket_repository.py
app/infra/: container.py
app/infra/bootstrap/: seed_categories.py
app/infra/db/repositories/: category_repository.py  memory_database.py  ticket_repository.py
app/infra/settings/: project_metadata.py  settings.py
app/infrastructure/: container.py
app/infrastructure/bootstrap/: seed_categories.py
app/infrastructure/db/sqlalchemy/: database.py
app/infrastructure/logging/: logger.py
app/infrastructure/settings/: settings.py
tests/integration/: conftest.py  factories.py  test_app_startup.py  test_category_endpoints.py  test_comment_endpoints.py  test_system_endpoints.py  test_ticket_endpoints.py
tests/integration/categories/: test_create_category.py  test_get_category.py  test_list_categories.py  test_update_category.py
tests/integration/comments/: test_comment_not_found.py  test_comment_validation.py  test_create_comment.py  test_list_comments.py  test_update_comment.py
tests/integration/system/: test_system_endpoints.py
tests/integration/tickets/: test_create_ticket.py  test_get_ticket.py  test_list_tickets.py  test_ticket_filters.py  test_ticket_pagination.py  test_ticket_sorting.py  test_update_ticket.py
(+25 files in other folders)
