[project]
name = "helpdesk-hub-api"
version = "0.1.0"
description = "API de gestão de chamados para suporte técnico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.135.2",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.48",
    "uvicorn==0.42.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "T201",
    "ANN",
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
